# pretty_graphql

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  dprint.json
dprint_plugin/: Cargo.toml
dprint_plugin/deployment/: schema.json
dprint_plugin/deployment/npm/: package.json
dprint_plugin/src/: config.rs  lib.rs
pretty_graphql/: Cargo.toml  README.md
pretty_graphql/examples/: fmt.rs
pretty_graphql/src/: config.rs  error.rs  lib.rs  printer.rs
pretty_graphql/tests/: fmt.rs  test-schema.json
pretty_graphql/tests/fmt/arguments/: hello.snap
pretty_graphql/tests/fmt/brace-spacing/: brace-spacing.disabled.snap  brace-spacing.enabled.snap  brace-spacing.override-disabled.snap  brace-spacing.override-enabled.snap  config.json
pretty_graphql/tests/fmt/bracket-spacing/: bracket-spacing.disabled.snap  bracket-spacing.enabled.snap  config.json
pretty_graphql/tests/fmt/comma/: comma.always.snap  comma.customized-always.snap  comma.customized-never.snap  comma.customized-no-trailing.snap  comma.customized-only-single-line.snap  comma.never.snap  comma.noTrailing.snap  comma.override-always.snap  comma.override-never.snap  comma.override-no-trailing.snap  comma.override-only-single-line.snap  config.json
pretty_graphql/tests/fmt/comments/: argument-comment.snap  fields.snap  interfaces.snap  tokens.snap
pretty_graphql/tests/fmt/definitions/: fields.snap
pretty_graphql/tests/fmt/deprecation/: directives.snap
pretty_graphql/tests/fmt/directive-decl/: directive-decl.snap
pretty_graphql/tests/fmt/directives/: directives.snap
(+73 files in other folders)
