[package]
name = "dprint_plugin_graphql"
version = "0.2.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "pretty_graphql as dprint plugin."
repository = "https://github.com/g-plane/pretty_graphql"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.66", default-features = false, features = [
    "wasm",
] }
pretty_graphql = { path = "../pretty_graphql", features = ["config_serde"] }
serde_json = "1.0"
