[package]
name = "pretty_graphql"
version = "0.1.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "GraphQL formatter."
repository = "https://github.com/g-plane/pretty_graphql"
license = "MIT"
keywords = ["graphql", "formatter"]
exclude = ["/tests"]

[dependencies]
apollo-parser = "0.8"
memchr = "2.7"
rowan = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }
tiny_pretty = "0.2"

[dev-dependencies]
insta = { version = "1.39", features = ["glob"] }
serde_json = "1.0"
similar-asserts = "1.5"

[features]
config_serde = ["serde"]
